[gd_scene load_steps=2 format=3 uid="uid://d4e2u54hxhdte"]

[ext_resource type="Script" uid="uid://cuhf4g5ckg3ar" path="res://drone/drone_hub/drone_hub.gd" id="1_a7jjb"]

[node name="DroneHub" type="Node2D"]
script = ExtResource("1_a7jjb")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 13.0
offset_bottom = 13.0
color = Color(1, 0.407843, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_right = 13.0
offset_bottom = 13.0
color = Color(0.987469, 0.554049, 0.467379, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
offset_right = 13.0
offset_bottom = 13.0
color = Color(0.709768, 0.728131, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="."]
visible = false
offset_right = 13.0
offset_bottom = 13.0
color = Color(0, 0.827102, 0.420421, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
visible = false
offset_right = 13.0
offset_bottom = 13.0
color = Color(0, 0.77145, 0.912642, 1)
